--- a/tox.ini
+++ b/tox.ini
@@ -5,7 +5,8 @@ envlist = py34,py35,py36
 [testenv]
 deps = -Ur{toxinidir}/requirements.txt
        -Ur{toxinidir}/requirements.testing.txt
-commands = flake8
+commands = pytest
+           flake8
 
 [flake8]
 builtins = unicode
