--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,9 @@ python:
 - '3.5'
 - '3.6'
 install: pip install tox-travis
-script: tox
+script: 
+  - echo $TRAVIS_TAG
+  - tox
 deploy:
   provider: pypi
   user: SketchingDev
